Fix for dark mode

--- a/_sass/_app.scss
+++ b/_sass/_app.scss
@@ -311,7 +311,7 @@ section#app-header {
 				
 				@include dark-mode {
 					background: 	$gray-700;
-					color: 		$black;
+					color: 		$white;
 				}
 				
 				padding:			$container-padding;
